--- a/app/src/main/res/layout/activity_info_form.xml
+++ b/app/src/main/res/layout/activity_info_form.xml
@@ -1,9 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+  android:orientation="vertical"
     tools:context=".infoForm">
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/edtNameInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="enter name"
+        android:inputType="textPersonName"
+        android:textColorHint="@color/colorAccent" />
+
+    <EditText
+        android:id="@+id/edtMob"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="enter mobile"
+        android:inputType="textPersonName"
+        android:textColorHint="@color/colorAccent" />
+
+    <EditText
+        android:id="@+id/edtEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="enter email"
+        android:inputType="textPersonName"
+        android:textColorHint="@color/colorAccent" />
+
+    <EditText
+        android:id="@+id/edtWeb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="enter website"
+        android:inputType="textPersonName"
+        android:textColorHint="@color/colorAccent" />
+
+    <Button
+        android:id="@+id/btnSubmitInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
+        android:background="#fe3b2dd1"
+        android:gravity="center_horizontal"
+        android:text="submit"
+        android:textColor="#ffffff"
+        android:textSize="24sp" />
+</LinearLayout>
